[package]
name = "api-services"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
url = "2.5.2"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"