[package]
name = "api-services"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
hex = "0.4.3"
chrono = { version = "0.4.39", features = ["serde"] }
url = "2.5.4"
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0.95"